
import Foundation

enum AccessibilityIdentifiers {
    enum Auth {
        static let authButton = "auth.authButton"
    }
    
    enum WebView {
        static let view = "webView.view"
        static let loginButton = "webView.loginButton"
    }
    
    enum ImageList {
        static let likeButton = "imageList.likeButton"
    }
    
    enum SingleImageView {
        static let backButton = "singleImageView.backButton"
    }
    
    enum ProfileView {
        static let logoutButton = "profileView.logoutButton"
        static let alert = "Пока, пока!"
        static let alertYesButton = "Да"
    }
}
